data/derived/fa15/progs/unify/prog0181.ml.out
Characters 42-71:
  fun n -> additivePersistence(n mod 10);;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int -> 'a
       but an expression was expected of type 'a
       The type variable 'a occurs inside int -> 'a
